--- a/level/index.html
+++ b/level/index.html
@@ -178,7 +178,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="关卡"><a class="header" href="#关卡">关卡</a></h1>
+                        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
+<h1 id="关卡"><a class="header" href="#关卡">关卡</a></h1>
 <h2 id="xsb-格式"><a class="header" href="#xsb-格式">XSB 格式</a></h2>
 <p>推箱子关卡所使用的 XSB 格式因其简洁和直观而受到了广泛的认可和应用, 最初由 XSokoban 所使用. 该格式使用 ASCII 字符来表示地图元素, 并支持注释和附加元数据.<br />
 以关卡 <code>Boxworld #1</code> 为例:</p>
