--- a/resources.html
+++ b/resources.html
@@ -178,7 +178,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="资源"><a class="header" href="#资源">资源</a></h1>
+                        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
+<h1 id="资源"><a class="header" href="#资源">资源</a></h1>
 <ul>
 <li><a href="http://sokobano.de/wiki/">http://sokobano.de/wiki/</a>: 德国推箱子 Wiki.</li>
 <li><a href="https://www.sokoban-online.de/">https://www.sokoban-online.de/</a>: 推箱子软件 JSoko.</li>
