--- a/print.html
+++ b/print.html
@@ -91,7 +91,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">介绍</a></li><li class="chapter-item expanded "><a href="level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level/representation.html"><strong aria-hidden="true">1.1.</strong> 表示</a></li><li class="chapter-item expanded "><a href="level/construction.html"><strong aria-hidden="true">1.2.</strong> 构造</a></li><li class="chapter-item expanded "><a href="level/normalization.html"><strong aria-hidden="true">1.3.</strong> 标准化 (WIP)</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> 动作</div></li><li class="chapter-item expanded "><a href="solver/index.html"><strong aria-hidden="true">3.</strong> 求解器 (WIP)</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.</strong> 计算复杂性</div></li><li class="chapter-item expanded "><a href="solver/solving_strategy.html"><strong aria-hidden="true">3.2.</strong> 搜索策略 (WIP)</a></li><li class="chapter-item expanded "><a href="solver/heuristic_function.html"><strong aria-hidden="true">3.3.</strong> 启发式函数 (WIP)</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.</strong> 优化</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.1.</strong> 隧道</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.2.</strong> 死锁</div></li></ol></li></ol></li><li class="chapter-item expanded "><a href="resources.html"><strong aria-hidden="true">4.</strong> 资源 (WIP)</a></li><li class="chapter-item expanded "><a href="glossary_of_terms.html"><strong aria-hidden="true">5.</strong> 术语表 (WIP)</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">介绍</a></li><li class="chapter-item expanded "><a href="level/index.html"><strong aria-hidden="true">1.</strong> 关卡</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="level/representation.html"><strong aria-hidden="true">1.1.</strong> 表示</a></li><li class="chapter-item expanded "><a href="level/construction.html"><strong aria-hidden="true">1.2.</strong> 构造</a></li><li class="chapter-item expanded "><a href="level/normalization.html"><strong aria-hidden="true">1.3.</strong> 标准化 (WIP)</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.</strong> 动作</div></li><li class="chapter-item expanded "><a href="solver/index.html"><strong aria-hidden="true">3.</strong> 求解器 (WIP)</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.</strong> 计算复杂性</div></li><li class="chapter-item expanded "><a href="solver/solving_strategy.html"><strong aria-hidden="true">3.2.</strong> 搜索策略 (WIP)</a></li><li class="chapter-item expanded "><a href="solver/heuristic_function.html"><strong aria-hidden="true">3.3.</strong> 启发式函数 (WIP)</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.</strong> 优化</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.1.</strong> 割点</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.2.</strong> 隧道</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.3.</strong> 死锁</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.5.</strong> 双向搜索</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> 优化器</div></li><li class="chapter-item expanded "><a href="resources.html"><strong aria-hidden="true">5.</strong> 资源 (WIP)</a></li><li class="chapter-item expanded "><a href="glossary_of_terms.html"><strong aria-hidden="true">6.</strong> 术语表 (WIP)</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -1111,16 +1111,6 @@ impl From&lt;ParseMapError&gt; for ParseLevelError {
 <hr />
 <p>记录已探索过的节点.</p>
 <p>复杂推箱子关卡的图可能存在环(Loop), 这也是为什么推箱子关卡的状态可以用图表示, 却无法用树(Tree)表示的原因.</p>
-<hr />
-<h2 id="双向搜索"><a class="header" href="#双向搜索">双向搜索</a></h2>
-<p>搜索目标状态到初始状态的路径.</p>
-<hr />
-<h2 id="割点"><a class="header" href="#割点">割点</a></h2>
-<p>通过割点可以在常量时间内判断两点是否是连通的.</p>
-<hr />
-<h2 id="优化器optimizer"><a class="header" href="#优化器optimizer">优化器(Optimizer)</a></h2>
-<p>对已知的路径进行<a href="https://en.wikipedia.org/wiki/Local_search_(optimization)">局部搜索(local search)</a>, 以寻找更佳的路径.</p>
-<p>TODO: 速度优先的搜索策略 + 优化器优化 = 快速得到一个不那么差的解决方案.</p>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
 <p><a href="https://en.wikipedia.org/wiki/State_space_search">https://en.wikipedia.org/wiki/State_space_search</a></p>
 </div>
