deploy: 669a16a04d0da376a230ace034c958cec69b1c6b

--- a/level/construction.html
+++ b/level/construction.html
@@ -610,6 +610,7 @@ impl From&lt;ParseMapError&gt; for ParseLevelError {
     }
 }
 </code></pre>
+<p>其中部分<em>验证解决方案</em>步骤能发现的错误也可以在<em>模拟玩家移动</em>的步骤中提前发现, 但为了保持代码的简洁, 这里不做检查.</p>
 <h2 id="性能测试"><a class="header" href="#性能测试">性能测试</a></h2>
 <p>TODO: 附上性能基准测试结果.</p>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">2</sup>
