--- a/level/construction.html
+++ b/level/construction.html
@@ -612,7 +612,11 @@ impl From&lt;ParseMapError&gt; for ParseLevelError {
 </code></pre>
 <p>其中部分<em>验证解决方案</em>步骤能发现的错误也可以在<em>模拟玩家移动</em>的步骤中提前发现, 但为了保持代码的简洁, 这里不做检查.</p>
 <h2 id="性能测试"><a class="header" href="#性能测试">性能测试</a></h2>
-<p>TODO: 附上性能基准测试结果.</p>
+<div class="table-wrapper"><table><thead><tr><th>项目</th><th>平均耗时</th></tr></thead><tbody>
+<tr><td>加载共 3371 个关卡</td><td>23.714 ms</td></tr>
+<tr><td>加载第 3371 个关卡</td><td>3.2700 ms</td></tr>
+</tbody></table>
+</div>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">2</sup>
 <p><a href="https://rust-lang.github.io/api-guidelines/interoperability.html#error-types-are-meaningful-and-well-behaved-c-good-err">https://rust-lang.github.io/api-guidelines/interoperability.html#error-types-are-meaningful-and-well-behaved-c-good-err</a></p>
 </div>
