--- a/solver/heuristic_function.html
+++ b/solver/heuristic_function.html
@@ -273,6 +273,7 @@ lower_bounds
 <p>玩家全部可达区域可能会被箱子分割为多个区域. 这些区域的数量越少意味着玩家可以移动的范围越大.</p>
 <p>因为区域是被箱子分割的, 因此只需要检测箱子周围的点所属的区域即可获得独立的区域数.
 通过判断箱子在割点上的情况快速判断独立区域的数量.</p>
+<p>TODO</p>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
 <p><a href="https://en.wikipedia.org/wiki/Admissible_heuristic">https://en.wikipedia.org/wiki/Admissible_heuristic</a></p>
 </div>
