deploy: 0ff648de6ff5d9041f50fa8ac7898c7c8a26e453

--- a/print.html
+++ b/print.html
@@ -198,22 +198,25 @@
 <h2 id="为什么选择推箱子作为案例"><a class="header" href="#为什么选择推箱子作为案例">为什么选择推箱子作为案例</a></h2>
 <p>之所以选择推箱子, 是因为它具有以下特点:</p>
 <ul>
-<li><strong>规则简单</strong>. 可以专注于实现功能, 而非理解复杂的游戏规则和机制.</li>
-<li><strong>基本功能易于实现</strong>, 如推箱子和通关判断.</li>
-<li><strong>有具有挑战的高级功能</strong>. 如纯鼠标控制, 逆推等.</li>
-<li><strong>有需要深入钻研的求解器</strong>, 用于自动求解推箱子关卡.</li>
+<li><strong>规则简单</strong>: 可以专注于实现功能, 而非理解复杂的游戏规则和机制.</li>
+<li><strong>基本功能易于实现</strong>: 如推箱子和通关判断.</li>
+<li><strong>有具有挑战的高级功能</strong>: 如纯鼠标控制, 逆推等.</li>
+<li><strong>有需要深入钻研的求解器</strong>: 用于自动求解推箱子关卡.</li>
 </ul>
 <p>推箱子的实现<strong>既可以简单也可以复杂</strong>, 读者可以根据自身的情况选择学习的深度.</p>
 <h2 id="内容范围"><a class="header" href="#内容范围">内容范围</a></h2>
 <p>本文将描述基本功能的具体实现方法, 高级功能的实现方法以及求解器的实现思路.<br />
 但本文<strong>不涉及</strong>以下内容:</p>
 <ul>
-<li>Rust 语言本身. 本文中出现的算法适用于其他编程语言, 但依然会涉及部分 Rust 相关内容的讲解, 如错误处理 (Rust 在这方面和其他语言不太一样), 不感兴趣的读者可以直接跳过这部分内容.</li>
-<li>游戏引擎. 本文中的推箱子实现并不依赖游戏引擎, 比如有的推箱子实现需要用到射线检测.</li>
-<li>推箱子的其他变种. 感兴趣的读者可以自行了解, 可以作为一种拓展.</li>
+<li>Rust 语言本身: 本文中出现的算法适用于其他编程语言, 但依然会涉及部分 Rust 相关内容的讲解, 如错误处理 (Rust 在这方面和其他语言不太一样), 不感兴趣的读者可以直接跳过这部分内容.</li>
+<li>游戏引擎: 本文中的推箱子实现并不依赖游戏引擎, 比如有的推箱子实现需要用到射线检测.</li>
+<li>推箱子的其他变种: 感兴趣的读者可以自行了解, 可以作为一种拓展.</li>
 </ul>
-<h2 id="数学公式"><a class="header" href="#数学公式">数学公式</a></h2>
-<p>关于算法的部分可能会涉及一些数学公式. 这些公式并非直接供读者阅读, 而是为了方便读者在对算法有新的理解后用来验证自己的想法.</p>
+<h2 id="需要具备的知识"><a class="header" href="#需要具备的知识">需要具备的知识</a></h2>
+<ul>
+<li>具备 Rust 语言的语法基础或熟悉一门编程语言.</li>
+<li>具备数据结构与算法的基础知识, 如 A* 搜索算法的工作原理.</li>
+</ul>
 <h2 id="项目代码"><a class="header" href="#项目代码">项目代码</a></h2>
 <p>完整的项目代码位于:</p>
 <ul>
