--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 </ul>
 <h2 id="需要具备的知识"><a class="header" href="#需要具备的知识">需要具备的知识</a></h2>
 <ul>
-<li>具备 Rust 语言的语法基础或熟悉一门编程语言.</li>
+<li>具备 Rust 语言的语法基础, 或熟悉一门编程语言.</li>
 <li>具备数据结构与算法的基础知识, 如 A* 搜索算法的工作原理.</li>
 </ul>
 <h2 id="项目代码"><a class="header" href="#项目代码">项目代码</a></h2>
