--- a/solver/index.html
+++ b/solver/index.html
@@ -239,6 +239,17 @@
     pub box_positions: HashSet&lt;Vector2&lt;i32&gt;&gt;,
 }
 </code></pre>
+<p>实现从 <code>Map</code> 到 <code>State</code> 的转换:</p>
+<pre><code class="language-rs">impl From&lt;Map&gt; for State {
+    fn from(map: Map) -&gt; Self {
+        Self {
+            player_position: map.player_position(),
+            box_positions: map.box_positions().clone(),
+        }
+    }
+}
+</code></pre>
+<p>这样就可以将地图转为初始状态, 然后作为搜索起点开始搜索.</p>
 <hr />
 <p>从初始状态开始探索其相邻的节点, 即邻域<sup class="footnote-reference"><a href="#8">8</a></sup>.</p>
 <p>通过下面函数来生成当前状态的派生状态, 即相邻的状态:</p>
