--- a/index.html
+++ b/index.html
@@ -203,18 +203,18 @@
 <li><strong>有需要深入钻研的求解器</strong>: 用于自动求解推箱子关卡.</li>
 </ul>
 <p>推箱子的实现<strong>既可以简单也可以复杂</strong>, 读者可以根据自身的情况选择学习的深度.</p>
+<h2 id="需要具备的知识"><a class="header" href="#需要具备的知识">需要具备的知识</a></h2>
+<ul>
+<li>具备 Rust 语言的语法基础, 或熟悉一门编程语言.</li>
+<li>具备数据结构与算法的基础知识, 如 A* 搜索算法的工作原理.</li>
+</ul>
 <h2 id="内容范围"><a class="header" href="#内容范围">内容范围</a></h2>
 <p>本文将描述基本功能的具体实现方法, 高级功能的实现方法以及求解器的实现思路.<br />
 但本文<strong>不涉及</strong>以下内容:</p>
 <ul>
 <li>Rust 语言本身: 本文中出现的算法适用于其他编程语言, 但依然会涉及部分 Rust 相关内容的讲解, 如错误处理 (Rust 在这方面和其他语言不太一样), 不感兴趣的读者可以直接跳过这部分内容.</li>
 <li>游戏引擎: 本文中的推箱子实现并不依赖游戏引擎, 比如有的推箱子实现需要用到射线检测.</li>
-<li>推箱子的其他变种: 感兴趣的读者可以自行了解, 可以作为一种拓展.</li>
-</ul>
-<h2 id="需要具备的知识"><a class="header" href="#需要具备的知识">需要具备的知识</a></h2>
-<ul>
-<li>具备 Rust 语言的语法基础, 或熟悉一门编程语言.</li>
-<li>具备数据结构与算法的基础知识, 如 A* 搜索算法的工作原理.</li>
+<li>推箱子的其他变体(Variant)<sup class="footnote-reference"><a href="#2">2</a></sup>.</li>
 </ul>
 <h2 id="项目代码"><a class="header" href="#项目代码">项目代码</a></h2>
 <p>完整的项目代码位于:</p>
@@ -229,6 +229,9 @@
 </ul>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
 <p><a href="https://www.sokoban.jp/history.html">https://www.sokoban.jp/history.html</a></p>
+</div>
+<div class="footnote-definition" id="2"><sup class="footnote-definition-label">2</sup>
+<p><a href="https://en.wikipedia.org/wiki/Sokoban#Variants">https://en.wikipedia.org/wiki/Sokoban#Variants</a></p>
 </div>
 
                     </main>
