--- a/print.html
+++ b/print.html
@@ -204,18 +204,18 @@
 <li><strong>有需要深入钻研的求解器</strong>: 用于自动求解推箱子关卡.</li>
 </ul>
 <p>推箱子的实现<strong>既可以简单也可以复杂</strong>, 读者可以根据自身的情况选择学习的深度.</p>
+<h2 id="需要具备的知识"><a class="header" href="#需要具备的知识">需要具备的知识</a></h2>
+<ul>
+<li>具备 Rust 语言的语法基础, 或熟悉一门编程语言.</li>
+<li>具备数据结构与算法的基础知识, 如 A* 搜索算法的工作原理.</li>
+</ul>
 <h2 id="内容范围"><a class="header" href="#内容范围">内容范围</a></h2>
 <p>本文将描述基本功能的具体实现方法, 高级功能的实现方法以及求解器的实现思路.<br />
 但本文<strong>不涉及</strong>以下内容:</p>
 <ul>
 <li>Rust 语言本身: 本文中出现的算法适用于其他编程语言, 但依然会涉及部分 Rust 相关内容的讲解, 如错误处理 (Rust 在这方面和其他语言不太一样), 不感兴趣的读者可以直接跳过这部分内容.</li>
 <li>游戏引擎: 本文中的推箱子实现并不依赖游戏引擎, 比如有的推箱子实现需要用到射线检测.</li>
-<li>推箱子的其他变种: 感兴趣的读者可以自行了解, 可以作为一种拓展.</li>
-</ul>
-<h2 id="需要具备的知识"><a class="header" href="#需要具备的知识">需要具备的知识</a></h2>
-<ul>
-<li>具备 Rust 语言的语法基础, 或熟悉一门编程语言.</li>
-<li>具备数据结构与算法的基础知识, 如 A* 搜索算法的工作原理.</li>
+<li>推箱子的其他变体(Variant)<sup class="footnote-reference"><a href="#2">2</a></sup>.</li>
 </ul>
 <h2 id="项目代码"><a class="header" href="#项目代码">项目代码</a></h2>
 <p>完整的项目代码位于:</p>
@@ -230,6 +230,9 @@
 </ul>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
 <p><a href="https://www.sokoban.jp/history.html">https://www.sokoban.jp/history.html</a></p>
+</div>
+<div class="footnote-definition" id="2"><sup class="footnote-definition-label">2</sup>
+<p><a href="https://en.wikipedia.org/wiki/Sokoban#Variants">https://en.wikipedia.org/wiki/Sokoban#Variants</a></p>
 </div>
 <div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
 <h1 id="关卡"><a class="header" href="#关卡">关卡</a></h1>
@@ -1075,7 +1078,7 @@ impl From&lt;ParseMapError&gt; for ParseLevelError {
     A--&gt;|R| C
     C--&gt;|L| A
 </pre>
-<p>这是一个以状态(State)为节点(Vertex), 动作(Action)为边(Edge)的有向图.<br />
+<p>这是一个以状态(State)为节点(Vertex), 动作(Action)为边(Edge)的有向图(Directed graph).<br />
 其中 <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord mathnormal">A</span></span></span></span> 为初始状态(Initial state, IS), <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord mathnormal" style="margin-right:0.07153em;">C</span></span></span></span> 为目标状态(Goal state, GS), <code>l</code> 和 <code>r</code> 分别表示玩家向左和向右移动, <code>R</code> 和 <code>L</code> 分别表示玩家向右推动和向左拉动.</p>
 <p>理论上, 状态 <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord mathnormal" style="margin-right:0.07153em;">C</span></span></span></span> 还可以衍生出更多子状态, 但因为其是目标状态, 搜索算法无需继续搜索, 因此这里不再展开.</p>
 <p>求解器的工作是进行空间状态搜索<sup class="footnote-reference"><a href="#1">1</a></sup>, 即首先根据初始状态生成推箱子关卡的图, 然后在这个图中寻找从初始状态到目标状态的路径. 以上图为例, 就是寻找从状态 <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord mathnormal">A</span></span></span></span> 到状态 <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord mathnormal" style="margin-right:0.07153em;">C</span></span></span></span> 的路径, 即 <code>R</code>.</p>
@@ -1101,10 +1104,10 @@ impl From&lt;ParseMapError&gt; for ParseLevelError {
 虽然可以通过计算出多个启发式函数值, 将它们融合为单个启发式函数值, 以同时利用多种启发式函数, 但由于多个启发式函数值被融合为了一个, 因此无法区分单个启发式函数值的变化趋势. FESS 算法则在这方面做出了改进. 本文第一作者 Yaron Shoham 还将该算法应用在了求解器 Festival<sup class="footnote-reference"><a href="#6">6</a></sup> 上, 并取得了极佳的效果<sup class="footnote-reference"><a href="#7">7</a></sup>.</p>
 </li>
 </ul>
+<p>本文不会进一步探讨 FESS 算法, 感兴趣的读者可以阅读相关论文.</p>
 <p>BSF/A*/IDA* 算法均可以用于搜索最短路径, 即最佳解决方案.<br />
 由于推箱子问题是PSPACE完全(PSPACE-complete)的, 使用 BSF 这种非启发式算法是难以搜索到解决方案的.<br />
 而 IDA* 算法则是基于 A* 算法的改进, 所以本文将描述如何创建一个基于 A* 搜索算法的求解器.</p>
-<p>本文不会进一步探讨 FESS 算法, 感兴趣的读者可以阅读相关论文.</p>
 <h2 id="表示状态"><a class="header" href="#表示状态">表示状态</a></h2>
 <p>状态只需要包含了玩家的位置和箱子的位置, 因为玩家和箱子是关卡中可移动对象. 保存它们的位置足以描述整个关卡的状态.<br />
 其他元素, 如墙壁/目标位置等是静态的，它们的位置不会随状态的改变而改变, 因此只需要从关卡的初始状态中获取它们的位置.</p>
@@ -1135,8 +1138,48 @@ impl From&lt;ParseMapError&gt; for ParseLevelError {
 </code></pre>
 <p>TODO</p>
 <hr />
-<p>记录已探索过的节点.</p>
-<p>复杂推箱子关卡的图可能存在环(Loop), 这也是为什么推箱子关卡的状态可以用图表示, 却无法用树(Tree)表示的原因.</p>
+<pre class="mermaid">flowchart LR
+    A[从 heap 中取出\n优先级最高的状态] --&gt; B{是目标状态?}
+    B --&gt;|是| C[返回路径]
+    B --&gt;|否| D[产生其子状态]
+    D --&gt; E{是否已访问过?}
+    E --&gt;|是| D
+    E --&gt;|否| F[将子状态加入 heap]
+    F --&gt; A
+</pre>
+<pre><code class="language-rs">impl Solver {
+    pub fn a_star_search(&amp;self, map: &amp;Map) -&gt; Result&lt;(), SearchError&gt; {
+        let mut heap = BinaryHeap::new();
+        let mut came_from = HashMap::new();
+        let mut visited = HashSet::new();
+
+        let state: State = map.clone().into();
+        heap.push(Node::new(state, 0, self));
+
+        while let Some(Node { state, cost, .. }) = heap.pop() {
+            if state.is_solved(self) {
+                return Ok(());
+            }
+            for successor in state.successors(self) {
+                if !visited.insert(successor.normalized_hash(map)) {
+                    continue;
+                }
+                came_from.insert(successor.clone(), state.clone());
+                heap.push(Node::new(successor, cost + 1, self));
+            }
+        }
+        Err(SearchError::NoSolution)
+    }
+    // ... SKIP ...
+}
+</code></pre>
+<p>复杂推箱子关卡的图可能存在环(Loop), 这意味着:</p>
+<ol>
+<li>需要记录已探索过的节点, 避免进入环中导致死循环.</li>
+<li>推箱子关卡的状态可以用图表示, 却无法用树(Tree)表示.</li>
+</ol>
+<p>已被探索的节点通常会被存储在一个闭集(Closed set)中, 为了通俗易懂使用了变量名 <code>visited</code>.</p>
+<p>复杂推箱子关卡的图非常大, 难以提前生成并存储在内存中. 因此可以在搜索的过程中逐步拓展图.</p>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
 <p><a href="https://en.wikipedia.org/wiki/State_space_search">https://en.wikipedia.org/wiki/State_space_search</a></p>
 </div>
