deploy: ac4c767e76e184ea4caa6b7a99dd4677be463754

--- a/print.html
+++ b/print.html
@@ -477,7 +477,7 @@ bitflags! {
 }
 </code></pre>
 <p>这样可以很方便的表示多种地图元素叠加的情况, 如使用 <code>Tiles::Floor | Tiles::Goal | Tiles::Player</code> 来表示玩家位于目标上, 而目标位于地板上的情况.<br />
-利用比特位表示元素不仅使得判断元素是否存在、添加或移除某个元素等操作变得非常便捷, 而且还带来了性能上的优势.</p>
+利用比特位表示元素不仅使得判断元素是否存在、添加或移除某个元素等操作变得非常便捷, 而且还有位运算带来的性能上的优势.</p>
 <h3 id="地图的存储"><a class="header" href="#地图的存储">地图的存储</a></h3>
 <p>使用一维数组来存储地图数据, 使用二维向量(数学)存储地图尺寸.</p>
 <pre><code class="language-rs">use nalgebra::Vector2;
