--- a/introduction.html
+++ b/introduction.html
@@ -206,7 +206,7 @@
 <h2 id="需要具备的知识"><a class="header" href="#需要具备的知识">需要具备的知识</a></h2>
 <ul>
 <li>具备 Rust 语言的语法基础, 或熟悉一门编程语言.</li>
-<li>具备数据结构与算法的基础知识, 如 A* 搜索算法的工作原理.</li>
+<li>有关高级功能和求解器的章节: 具备数据结构与算法的基础知识, 如 A* 搜索算法的工作原理.</li>
 </ul>
 <h2 id="内容范围"><a class="header" href="#内容范围">内容范围</a></h2>
 <p>本文将描述基本功能的具体实现方法, 高级功能的实现方法以及求解器的实现思路.<br />
