deploy: d556df3c5f92888cca28deb534a9f021260352a7

--- a/print.html
+++ b/print.html
@@ -1033,8 +1033,7 @@ impl From&lt;ParseMapError&gt; for ParseLevelError {
 </li>
 </ol>
 <h2 id="激进的标准化"><a class="header" href="#激进的标准化">激进的标准化</a></h2>
-<p>激进的标准化可能改变关卡的解.
-以最简单的关卡为例:</p>
+<p>激进的标准化可能改变关卡的解. 以最简单的关卡为例:</p>
 <pre><code class="language-txt">#####
 #@$.#
 #####
