--- a/level/representation.html
+++ b/level/representation.html
@@ -229,7 +229,7 @@ impl IndexMut&lt;Vector2&lt;i32&gt;&gt; for Map {
 </code></pre>
 <p>这样便可以直接通过二维坐标访问地图元素, 例如访问地图 <span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mopen">(</span><span class="mord">1</span><span class="mpunct">,</span><span class="mspace" style="margin-right:0.1667em;"></span><span class="mord">1</span><span class="mclose">)</span></span></span></span> 位置的元素: <code>map[Vector2::new(1, 1)]</code>.<br />
 这样的设计不仅可以享受了二维数组访问方式的便捷性, 还能保留了一维数组带来的性能优势.</p>
-<p>值得注意的是其中的断言, 该函数最终通过下标访问一维数组进行了部分的越界检查, 但越界检查依然不完整. 因为这种越界检查没有涵盖以下无效情况:</p>
+<p>值得注意的是其中的断言, 该函数最终通过下标访问一维数组由 <code>Index&lt;&gt; for Vec&lt;&gt;</code> 进行了部分越界检查, 但越界检查依然不完整, 没有涵盖以下无效情况:</p>
 <ol>
 <li><code>x</code> 可以超出地图宽度的情况, 但其一维数组下标依然有效.</li>
 <li><code>x</code>, <code>y</code> 中存在负数, 但其一维数组下标依然可能是正数.</li>
