--- a/print.html
+++ b/print.html
@@ -226,7 +226,7 @@
 <h2 id="拓展资料"><a class="header" href="#拓展资料">拓展资料</a></h2>
 <p>推荐视频 🎥:</p>
 <ul>
-<li><a href="https://www.bilibili.com/video/BV1Ph41117YT%3E">【GM】火遍全球的推箱子，那些你所不知道的故事！· Bilibili</a>: 该视频详细介绍了推箱子的历史和发展.</li>
+<li><a href="https://www.bilibili.com/video/BV1Ph41117YT">【GM】火遍全球的推箱子，那些你所不知道的故事！· Bilibili</a>: 该视频详细介绍了推箱子的历史和发展.</li>
 </ul>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
 <p><a href="https://www.sokoban.jp/history.html">https://www.sokoban.jp/history.html</a></p>
