--- a/level/construction.html
+++ b/level/construction.html
@@ -177,8 +177,8 @@
                 <div id="content" class="content">
                     <main>
                         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
-<h1 id="构建-"><a class="header" href="#构建-">构建 🏗️</a></h1>
-<h2 id="从-xsb-格式字符串构建关卡"><a class="header" href="#从-xsb-格式字符串构建关卡">从 XSB 格式字符串构建关卡</a></h2>
+<h1 id="构造-"><a class="header" href="#构造-">构造 🏗️</a></h1>
+<h2 id="从-xsb-格式字符串构造关卡"><a class="header" href="#从-xsb-格式字符串构造关卡">从 XSB 格式字符串构造关卡</a></h2>
 <p>关卡解析可以分为两部分: 地图解析, 元数据和注释解析.</p>
 <p>一个 XSB 格式的关卡文件中通常包含多个关卡, 不同关卡之间通过空行分割. 因此解析 XSB 格式的数据大致可分为两个步骤:</p>
 <ol>
@@ -254,7 +254,7 @@
 <p>返回迭代器是因为可以利用迭代器的<strong>惰性求值</strong>, 来惰性的分割关卡.</p>
 <p>这种实现方式有以下优点:</p>
 <ul>
-<li>支持流式读取并构建关卡. 例如, 通过利用 <code>BufReader</code><sup class="footnote-reference"><a href="#2">1</a></sup> 支持从大文件中逐步地加载关卡数据, 避免了内存的大量占用和性能瓶颈.</li>
+<li>支持流式读取并构造关卡. 例如, 通过利用 <code>BufReader</code><sup class="footnote-reference"><a href="#2">1</a></sup> 支持从大文件中逐步地加载关卡数据, 避免了内存的大量占用和性能瓶颈.</li>
 <li>读取第 n 个关卡. 跳过前 n-1 个关卡, 只对第 n 个关卡的数据进行解析. 可以加快从多个关卡中加载单个关卡的速度.</li>
 </ul>
 <pre><code class="language-rs">impl Level {
@@ -520,8 +520,8 @@ impl From&lt;ParseMapError&gt; for ParseLevelError {
 </code></pre>
 <p>重载 <code>ParseMapError</code> 到 <code>ParseLevelError</code> 的转换, 以便 <code>Level::from_str</code> 直接返回 <code>Map::from_str</code> 中的错误.<br />
 遵循 Rust API Guidelines (C-GOOD-ERR)<sup class="footnote-reference"><a href="#1">2</a></sup> 的建议, 应该为错误类型实现 <code>Debug</code> / <code>Error</code> 和 <code>Display</code> 等 trait. 本文使用库 <code>thiserror</code><sup class="footnote-reference"><a href="#3">3</a></sup> 来自动完成这一步骤.</p>
-<h2 id="从解决方案构建关卡"><a class="header" href="#从解决方案构建关卡">从解决方案构建关卡</a></h2>
-<p>从解决方案构建关卡可以分为以下几个部分:</p>
+<h2 id="从解决方案构造关卡"><a class="header" href="#从解决方案构造关卡">从解决方案构造关卡</a></h2>
+<p>从解决方案构造关卡可以分为以下几个部分:</p>
 <ol>
 <li>
 <p><strong>确定地图尺寸</strong>: 地图的尺寸等于玩家移动范围加上 1, 以包含外墙.</p>
@@ -536,7 +536,7 @@ impl From&lt;ParseMapError&gt; for ParseLevelError {
 <p><strong>添加墙壁</strong>: 在地板周围添加墙壁, 以形成完整的关卡结构.</p>
 </li>
 <li>
-<p><strong>验证解决方案</strong>: 在构建的关卡里验证解决方案的有效性. 若验证失败, 则表示解决方案不正确.</p>
+<p><strong>验证解决方案</strong>: 在构造的关卡里验证解决方案的有效性. 若验证失败, 则表示解决方案不正确.</p>
 </li>
 </ol>
 <pre><code class="language-rs">impl Map {
