deploy: 14d4ffecf859670b90af473cd4ad3ae7fd2d16a3

--- a/print.html
+++ b/print.html
@@ -1360,8 +1360,7 @@ lower_bounds
 }
 </code></pre>
 <h2 id="特征"><a class="header" href="#特征">特征</a></h2>
-<p>除了通过下界计算得到的启发式函数值, 还有一些特征可以帮助在<br />
-还有一些特征的值可以附加在启发式函数值上, 在确保启发式函数值保持其容许性的前提下, 优先搜索有相同启发式函数值的状态中选择更接近目标状态的节点.</p>
+<p>除了通过下界计算得到的启发式函数值, 还有一些特征的值可以附加在启发式函数值上, 在确保启发式函数值保持其容许性的前提下, 优先搜索有相同启发式函数值的状态中选择更接近目标状态的节点.</p>
 <h3 id="连接性特征"><a class="header" href="#连接性特征">连接性特征</a></h3>
 <p>玩家全部可达区域可能会被箱子分割为多个区域. 这些区域的数量越少意味着玩家可以移动的范围越大.</p>
 <p>因为区域是被箱子分割的, 因此只需要检测箱子周围的点所属的区域即可获得独立的区域数.
