deploy: 42b705c1ea086669529721df77a8de740814952b

--- a/print.html
+++ b/print.html
@@ -512,8 +512,8 @@ impl IndexMut&lt;Vector2&lt;i32&gt;&gt; for Map {
 这样的设计不仅可以享受了二维数组访问方式的便捷性, 还能保留了一维数组带来的性能优势.</p>
 <p>值得注意的是其中的断言, 该函数最终通过下标访问一维数组由 <code>Index&lt;&gt; for Vec&lt;&gt;</code> 进行了部分越界检查, 但越界检查依然不完整, 没有涵盖以下无效情况:</p>
 <ol>
-<li><code>x</code> 可以超出地图宽度的情况, 但其一维数组下标依然有效.</li>
-<li><code>x</code>, <code>y</code> 中存在负数, 但其一维数组下标依然可能是正数.</li>
+<li>坐标 <code>x</code> 可以超出地图宽度的情况, 但其一维数组下标依然有效.</li>
+<li>坐标 <code>x</code>, <code>y</code> 中存在负数, 但其一维数组下标依然可能是正数.</li>
 </ol>
 <h2 id="表示关卡"><a class="header" href="#表示关卡">表示关卡</a></h2>
 <p>关卡数据可分为三个部分: 地图数据, 元数据和注释. 其中注释可以作为元数据.<br />
@@ -528,7 +528,7 @@ pub struct Level {
 }
 </code></pre>
 <p>将地图从关卡中拆分是因为地图涉及大量的关联函数, 如果都放在 <code>Level</code> 里会导致其变得过于庞大.<br />
-为了提升代码的可读性和可维护性, 将相关代码拆分到 <code>Map</code> 中, 并将 <code>Level</code> 的 Deref 操作指向 <code>Map</code>. 并通过实现 <a href="https://doc.rust-lang.org/std/ops/trait.Deref.html">Deref trait</a>, 使得用户能够透明地引用到 <code>Level</code> 内部的 Map.</p>
+为了提升代码的可读性和可维护性, 将相关代码拆分到 <code>Map</code> 中, 并将 <code>Level</code> 的 Deref 操作指向 <code>Map</code>. 并通过实现 <code>Deref</code> trait, 使得用户能够透明地引用到 <code>Level</code> 内部的 Map.</p>
 <div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
 <h1 id="构造-"><a class="header" href="#构造-">构造 🏗️</a></h1>
 <h2 id="从-xsb-格式字符串构造关卡"><a class="header" href="#从-xsb-格式字符串构造关卡">从 XSB 格式字符串构造关卡</a></h2>
@@ -1147,7 +1147,7 @@ impl From&lt;ParseMapError&gt; for ParseLevelError {
 </code></pre>
 <p>其中 <code>priority</code> 的值是根据搜索策略而计算的.</p>
 <p>对于未探索的状态, 可以利用 <code>BinaryHeap</code> 容器来存储. 因为该容器能够高效地取出最大的元素.</p>
-<p>通过重载 <code>Node</code> 的 <code>Ord</code> 特征, 可以将状态通过优先级排序.</p>
+<p>通过重载 <code>Node</code> 的 <code>Ord</code> trait, 可以将状态通过优先级排序.</p>
 <pre><code class="language-rs">impl Ord for Node {
     fn cmp(&amp;self, other: &amp;Self) -&gt; Ordering {
         self.priority.cmp(&amp;other.priority).reverse()
